--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul> <ul>
      <li><a>avenger</a></li>
         </ul> <ul>
-        li><a>earthling</a></li>
+        <li><a>earthling</a></li>
        
 </ul>
        
